; ModuleID = '/home/carl/AnghaBench/i3/src/extr_xcb.c_xcb_set_root_cursor.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_xcb.c_xcb_set_root_cursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@conn = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"cursor\00", align 1
@root = common dso_local global i32 0, align 4
@XCB_CW_CURSOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xcb_set_root_cursor(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* @conn, align 4
  %7 = call i32 @xcb_generate_id(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = call i32 @load_font(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 0)
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  store i32 %8, i32* %11, align 4
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @xcursor_get_xcb_cursor(i32 %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* @conn, align 4
  %15 = load i32, i32* %3, align 4
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* %5, align 4
  %26 = add nsw i32 %25, 1
  %27 = call i32 @xcb_create_glyph_cursor(i32 %14, i32 %15, i32 %19, i32 %23, i32 %24, i32 %26, i32 0, i32 0, i32 0, i32 65535, i32 65535, i32 65535)
  %28 = load i32, i32* @conn, align 4
  %29 = load i32, i32* @root, align 4
  %30 = load i32, i32* @XCB_CW_CURSOR, align 4
  %31 = call i32 @xcb_change_window_attributes(i32 %28, i32 %29, i32 %30, i32* %3)
  %32 = load i32, i32* @conn, align 4
  %33 = load i32, i32* %3, align 4
  %34 = call i32 @xcb_free_cursor(i32 %32, i32 %33)
  %35 = load i32, i32* @conn, align 4
  %36 = call i32 @xcb_flush(i32 %35)
  ret void
}

declare dso_local i32 @xcb_generate_id(i32) #1

declare dso_local i32 @load_font(i8*, i32) #1

declare dso_local i32 @xcursor_get_xcb_cursor(i32) #1

declare dso_local i32 @xcb_create_glyph_cursor(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @xcb_change_window_attributes(i32, i32, i32, i32*) #1

declare dso_local i32 @xcb_free_cursor(i32, i32) #1

declare dso_local i32 @xcb_flush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
